--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
-  "private": true,
+  "name": "vuetify-1-vue3",
+  "version": "0.0.1",
+  "private": false,
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
     "dev": "vite",
