--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "typescript": "^5.3.3",
